# Cpp_extract_giga_word_pair

./: CMakeLists.txt  README.md
sample/: giga_JointST.pku.1000.embed.txt  giga_JointST.pku.1000.txt
src/: CMakeLists.txt  main.cpp
